--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,7 +1,5 @@
-<!-- <input type="number" [(ngModel)]="newPost.id" class="form-control" placeholder="ID">
-<input type="text" [(ngModel)]="newPost.title" class="form-control" placeholder="Title">
-<input type="text" [(ngModel)]="newPost.body" class="form-control" placeholder="Body">
-<button (keyup.enter)="createPost()">Create Post</button> -->
+
+<div>{{ message }}</div>
 <input 
   (keyup.enter)="createPost(idInput, titleInput, bodyInput)"
   #idInput
@@ -9,20 +7,21 @@
   class="form-control"
   placeholder="Enter Id"
 >
-<input  (keyup.enter)="createPost(idInput, titleInput, bodyInput)"
+<input  
+  (keyup.enter)="createPost(idInput, titleInput, bodyInput)"
   #titleInput
   type="text"
   class="form-control"
   placeholder="Enter title"
 >
 
-<input  (keyup.enter)="createPost(idInput, titleInput, bodyInput)"
+<input  
+  (keyup.enter)="createPost(idInput, titleInput, bodyInput)"
   #bodyInput
   type="text"
   class="form-control"
   placeholder="Enter body"
 >
-
 
 <ul>
   <li *ngFor="let post of posts">
